--- a/html/about-us/contact-info.html
+++ b/html/about-us/contact-info.html
@@ -37,7 +37,7 @@
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">
@@ -312,7 +312,7 @@
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
