--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>会社概要 - サムスンＣ＆Ｔジャパン</title>
 
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../../resources/img/common/favicon.ico">
+    <link rel="icon" href="../../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://trading.samsungcnt.com/main.do"/>
 
     <meta name="keyword"			content="サムスンＣ＆Ｔジャパン, サムスンＣ＆Ｔ, サムスン物産, 化学、鉄鋼、素材、エネルギー, Samsung C&T Japan"/>
@@ -24,44 +24,44 @@
     <meta property="og:image:height"	content="872">
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
-    <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>       
-    <link rel="stylesheet" href="/resources/css/slick.css"/>  
-    <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>      
-    <script src="/resources/js/slick.js"></script>         
-    <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
+    <link rel="stylesheet" href="../../resources/css/style.css"/>    
+    <link rel="stylesheet" href="../../resources/css/aos.css"/>       
+    <link rel="stylesheet" href="../../resources/css/slick.css"/>  
+    <script src="../../resources/js/jquery.min.js"></script>    
+    <script src="../../resources/js/aos.js"></script>      
+    <script src="../../resources/js/slick.js"></script>         
+    <script src="../../resources/js/include.js"></script>         
+    <script src="../../resources/js/common.js"></script>    
 
 </head>
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">    
-        <section class="sub_cont">
+        <section class="sub_cont sub_title">
             <h2 class="title">アクセス</h2>
             <span class="sub">Office Locations</span>
         </section>      
-        <section class="sub_cont">
+        <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
             <b>本社</b>
-            <p>〒108-0075<br>東京都港区港南二丁目16番4号 品川グランドセントラルタワー 6階</p>            
+            <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br class="web" />品川グランドセントラルタワー 6階</p>            
             <p>
                 <b>最寄駅</b>
-                JR 品川駅 港南口よりスカイウェイにて直結 徒歩 3 分 京浜急行 品川駅より 徒歩 6 分
+                JR 品川駅 港南口よりスカイウェイにて直結 徒歩 3 分 <br class="web" />京浜急行 品川駅より 徒歩 6 分
             </p>
-            <img src="">
+            <img src="../../resources/img/sub/img_locations_bg.jpg">
         </section>             
-        <section class="sub_cont">
+        <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
             <b>大阪 支店</b>
             <p>〒530-0002<br>大阪府大阪市北区曽根崎新地1-13-22</p>            
         </section>
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
