--- a/html/about-us/our-philosophy.html
+++ b/html/about-us/our-philosophy.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>企業理念 - サムスンＣ＆Ｔジャパン</title>
 
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../../resources/img/common/favicon.ico">
+    <link rel="icon" href="../../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://trading.samsungcnt.com/main.do"/>
 
     <meta name="keyword"			content="サムスンＣ＆Ｔジャパン, サムスンＣ＆Ｔ, サムスン物産, 化学、鉄鋼、素材、エネルギー, Samsung C&T Japan"/>
@@ -24,20 +24,20 @@
     <meta property="og:image:height"	content="872">
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
-    <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>       
-    <link rel="stylesheet" href="/resources/css/slick.css"/>  
-    <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>      
-    <script src="/resources/js/slick.js"></script>         
-    <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
+    <link rel="stylesheet" href="../../resources/css/style.css"/>    
+    <link rel="stylesheet" href="../../resources/css/aos.css"/>       
+    <link rel="stylesheet" href="../../resources/css/slick.css"/>  
+    <script src="../../resources/js/jquery.min.js"></script>    
+    <script src="../../resources/js/aos.js"></script>      
+    <script src="../../resources/js/slick.js"></script>         
+    <script src="../../resources/js/include.js"></script>         
+    <script src="../../resources/js/common.js"></script>    
 
 </head>
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">
@@ -184,7 +184,7 @@
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
