--- a/html/about-us/presidents-message.html
+++ b/html/about-us/presidents-message.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>社長メッセージ - サムスンＣ＆Ｔジャパン</title>
 
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../../resources/img/common/favicon.ico">
+    <link rel="icon" href="../../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://trading.samsungcnt.com/main.do"/>
 
     <meta name="keyword"			content="サムスンＣ＆Ｔジャパン, サムスンＣ＆Ｔ, サムスン物産, 化学、鉄鋼、素材、エネルギー, Samsung C&T Japan"/>
@@ -24,43 +24,42 @@
     <meta property="og:image:height"	content="872">
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
-    <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>       
-    <link rel="stylesheet" href="/resources/css/slick.css"/>  
-    <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>      
-    <script src="/resources/js/slick.js"></script>         
-    <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
+    <link rel="stylesheet" href="../../resources/css/style.css"/>    
+    <link rel="stylesheet" href="../../resources/css/aos.css"/>       
+    <link rel="stylesheet" href="../../resources/css/slick.css"/>  
+    <script src="../../resources/js/jquery.min.js"></script>    
+    <script src="../../resources/js/aos.js"></script>      
+    <script src="../../resources/js/slick.js"></script>         
+    <script src="../../resources/js/include.js"></script>         
+    <script src="../../resources/js/common.js"></script>    
 
 </head>
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">        
-        <section class="sub_cont">
+        <section class="sub_cont sub_title">
             <h2 class="title">社長メッセージ</h2>
-            <span class="sub">CEO Message</span>
+            <span class= "sub">CEO Message</span>
         </section>     
-        <section class="sub_cont">
-            <div>
-                <p>化学、鉄鋼、素材、エネルギーの分野を中心に積極的に挑戦をしながら事業を展開し、持続的な成長を目指してまいります。</p>
+        <section class="sub_cont ceo" data-aos="fade-up" data-aos-delay="300">
+            <div class="bg">
+                <p>化学、鉄鋼、素材、エネルギーの分野を<br class="web" />中心に積極的に挑戦をしながら事業を展開し、<br class="web" />持続的な成長を目指してまいります。</p>
             </div>
-            <div>
+            <div class="text">
                 <p>平素は格別のお引き立てを賜り、誠にありがとうございます。</p>
-                <p>弊社は、1953年に日本での事業を開始して70年以上もの間、「人材と技術をもとに、最高の製品とサービスを創り出し、人類社会に貢献する。」というSamsungの経営理念のもと、お客様のニーズに応じ新たな価値を創造し成長してまいりました。</p>
-                <p>現在の事業環境は、地政学的リスクの長期化による経済情勢や金融市場の不安定さに加え、円安や物価上昇による消費影響が深刻化するなど、先行きの不透明な状況が続いております。 このように変わりゆく厳しい環境下においても、化学、鉄鋼、素材、エネルギーの分野を中心に積極的に挑戦をしながら事業を展開し、持続的な成長を目指してまいります。</p>
-                <p>役職員一同、OneTeamで、取り組んでまいりますので、今後とも変わらぬご支援ご鞭撻を賜りたく、宜しくお願い申し上げます。</p>
+                <p>弊社は、1953年に日本での事業を開始して70年以上もの間、「人材と技術をもとに、<br class="web" />最高の製品とサービスを創り出し、人類社会に貢献する。」というSamsungの<br class="web" />経営理念のもと、お客様のニーズに応じ新たな価値を創造し成長してまいりました。</p>
+                <p>現在の事業環境は、地政学的リスクの長期化による経済情勢や金融市場の<br class="web" />不安定さに加え、円安や物価上昇による消費影響が深刻化するなど、<br class="web" />先行きの不透明な状況が続いております。 <br class="web" />このように変わりゆく厳しい環境下においても、化学、鉄鋼、素材、エネルギーの<br class="web" />分野を中心に積極的に挑戦をしながら事業を展開し、持続的な成長を目指して<br class="web" />まいります。</p>
+                <p>役職員一同、OneTeamで、取り組んでまいりますので、<br class="web" />今後とも変わらぬご支援ご鞭撻を賜りたく、宜しくお願い申し上げます。</p>
             </div>
         </section>
-
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
