--- a/html/about-us/vision.html
+++ b/html/about-us/vision.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>VISION - サムスンＣ＆Ｔジャパン</title>
 
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../../resources/img/common/favicon.ico">
+    <link rel="icon" href="../../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://trading.samsungcnt.com/main.do"/>
 
     <meta name="keyword"			content="サムスンＣ＆Ｔジャパン, サムスンＣ＆Ｔ, サムスン物産, 化学、鉄鋼、素材、エネルギー, Samsung C&T Japan"/>
@@ -24,61 +24,61 @@
     <meta property="og:image:height"	content="872">
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
-    <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>       
-    <link rel="stylesheet" href="/resources/css/slick.css"/>  
-    <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>      
-    <script src="/resources/js/slick.js"></script>         
-    <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
+    <link rel="stylesheet" href="../../resources/css/style.css"/>    
+    <link rel="stylesheet" href="../../resources/css/aos.css"/>       
+    <link rel="stylesheet" href="../../resources/css/slick.css"/>  
+    <script src="../../resources/js/jquery.min.js"></script>    
+    <script src="../../resources/js/aos.js"></script>      
+    <script src="../../resources/js/slick.js"></script>         
+    <script src="../../resources/js/include.js"></script>         
+    <script src="../../resources/js/common.js"></script>    
 
 </head>
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont">
-            <h2 class="title">Visiom</h2>
+        <section class="sub_cont sub_title">
+            <h2 class="title">Vision</h2>
         </section>
-        <section class="sub_cont">
-            <img src="">
+        <section class="sub_cont sub_img">
+            <img src="../../resources/img/sub/img_vision_bg.jpg" alt="Vision background image">
             <div>
-                <b>Global Value Creating Company</b>
-                <p>トレーディングと環境にやさしい 事業開発を通して 社会に寄与していきます。</p>
+                <b>Global Value <br class="mobile">Creating Company</b>
+                <p>トレーディングと環境にやさしい <br class="mobile">事業開発を通して <br class="mobile"> 社会に寄与していきます。</p>
             </div>
         </section>
-        <section class="sub_cont">
-            <p>グローバル市場にて、産業における専門性に基づき、市場の変化に対応し、 付加価値を生み出すことで、顧客により良い価値を提供していきます。</p>
-            <div>
-                <dl>
+        <section class="sub_cont vision">
+            <p>グローバル市場にて、産業における専門性<br class="mobile">に基づき、市場の変化に対応し、 <br>付加価値を生み出すことで、顧客により良<br class="mobile">い価値を提供していきます。</p>
+            <div class="info">
+                <dl data-aos="fade-up" data-aos-delay="100">
                     <dt>事業戦略</dt>
                     <dd>
-                        <ul>
+                        <ul class="sub_list">
                             <li>化学、鉄鋼、素材、エネルギー分野でのValue Chainと機能拡大など事業モデル革新による成長追求</li>
-                            <li>今後の環境変化に対応し、有望分野における新事業創出</li>
+                            <li>今後の環境変化に対応し、<br>有望分野における新事業創出</li>
                         </ul>
                     </dd>
-                </dl>
-                <dl>
+                </dl> 
+                <dl data-aos="fade-up" data-aos-delay="300">
                     <dt>実行体系</dt>
                     <dd>
-                        <ul>
+                        <ul class="sub_list">
                             <li>産業/機能/地域の専門知識を強化</li>
                             <li>効率的で柔軟な組織文化</li>
                             <li>堅実経営のためのリスク管理</li>
                         </ul>
                     </dd>
                 </dl>
-                <dl>
+                <dl data-aos="fade-up" data-aos-delay="500">
                     <dt>総合力</dt>
                     <dd>
-                        <ul>
+                        <ul class="sub_list">
                             <li >人材、取引先、グローバルネットワークなど独自のビジネスインフラ</li>
-                            <li>商品/産業、地域機能に関する様々な知識とノウハウ</li>
+                            <li>商品/産業、地域機能に関する様々な知識とノウ<br class="web">ハウ</li>
                             <li>多様性、柔軟性、創造性で想像力を発揮</li>
                         </ul>
                     </dd>
@@ -89,7 +89,7 @@
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
