--- a/html/header.html
+++ b/html/header.html
@@ -30,13 +30,13 @@
                 <span>会社情報</span>
             </div>
             <ul>
-                <li><a href="">会社概要</a></li>
-                <li><a href="">VISION</a></li>
-                <li><a href="">企業理念</a></li>
-                <li><a href="">社長メッセージ</a></li>
-                <li><a href="">沿革</a></li>
-                <li><a href="">アクセス</a></li>
-                <li><a href="">お問い合わせ</a></li>
+                <li><a href="/html/about-us/corporate-profile.html">会社概要</a></li>
+                <li><a href="/html/about-us/vision.html">VISION</a></li>
+                <li><a href="/html/about-us/our-philosophy.html">企業理念</a></li>
+                <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
+                <li><a href="/html/about-us/history.html">沿革</a></li>
+                <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
+                <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
             </ul>
         </div>
         <div data-gnb="2">
@@ -115,13 +115,13 @@
                     <button type="button" class="icon icon_toggle">menu_close</button>
                 </div>
                 <ul class="depth2">
-                    <li><a href="">会社概要</a></li>
-                    <li><a href="">VISION</a></li>
-                    <li><a href="">企業理念</a></li>
-                    <li><a href="">社長メッセージ</a></li>
-                    <li><a href="">沿革</a></li>
-                    <li><a href="">アクセス</a></li>
-                    <li><a href="">お問い合わせ</a></li>
+                    <li><a href="/html/about-us/corporate-profile.html">会社概要</a></li>
+                    <li><a href="/html/about-us/vision.html">VISION</a></li>
+                    <li><a href="/html/about-us/our-philosophy.html">企業理念</a></li>
+                    <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
+                    <li><a href="/html/about-us/history.html">沿革</a></li>
+                    <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
+                    <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
                 </ul>
             </li>
             <li>
