--- a/html/index.html
+++ b/html/index.html
@@ -173,7 +173,7 @@
                     <td></td>
                     <td>corporate-profile</td>
                     <td><a href="/html/about-us/corporate-profile.html" target="_blank"> /html/about-us/corporate-profile.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b2"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -181,7 +181,7 @@
                     <td></td>
                     <td>vision</td>
                     <td><a href="/html/about-us/vision.html" target="_blank"> /html/about-us/vision.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -197,7 +197,7 @@
                     <td></td>
                     <td>ceo-message</td>
                     <td><a href="/html/about-us/presidents-message.html" target="_blank"> /html/about-us/presidents-message.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -213,7 +213,7 @@
                     <td></td>
                     <td>office locations</td>
                     <td><a href="/html/about-us/office-locations.html" target="_blank"> /html/about-us/office-locations.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
