--- a/html/about-us/corporate-profile.html
+++ b/html/about-us/corporate-profile.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>会社概要 - サムスンＣ＆Ｔジャパン</title>
 
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../../resources/img/common/favicon.ico">
+    <link rel="icon" href="../../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://trading.samsungcnt.com/main.do"/>
 
     <meta name="keyword"			content="サムスンＣ＆Ｔジャパン, サムスンＣ＆Ｔ, サムスン物産, 化学、鉄鋼、素材、エネルギー, Samsung C&T Japan"/>
@@ -24,87 +24,86 @@
     <meta property="og:image:height"	content="872">
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
-    <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>       
-    <link rel="stylesheet" href="/resources/css/slick.css"/>  
-    <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>      
-    <script src="/resources/js/slick.js"></script>         
-    <script src="/resources/js/include.js"></script>         
-    <script src="/resources/js/common.js"></script>    
+    <link rel="stylesheet" href="../../resources/css/style.css"/>    
+    <link rel="stylesheet" href="../../resources/css/aos.css"/>       
+    <link rel="stylesheet" href="../../resources/css/slick.css"/>  
+    <script src="../../resources/js/jquery.min.js"></script>    
+    <script src="../../resources/js/aos.js"></script>      
+    <script src="../../resources/js/slick.js"></script>         
+    <script src="../../resources/js/include.js"></script>         
+    <script src="../../resources/js/common.js"></script>    
 
 </head>
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <header data-include="./header.html" class="header"></header>
+    <header data-include="../header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont">
+        <section class="sub_cont sub_title">
             <h2 class="title">会社概要</h2>
             <span class="sub">Corporate Profile</span>
-            <p class="explain"></p>
         </section>
-        <section class="sub_cont">
-            <img src="">
+        <section class="sub_cont sub_img2" data-aos="fade-up" data-aos-delay="300">
+            <img src="../../resources/img/sub/img_corporate_bg.jpg">
             <div>
-                <p>サムスン物産（韓国）の海外拠点の一つである日本にて、70年の長い歴史を誇る、 化学、鉄鋼、素材、エネルギーなど様々な分野にて未来価値を作り、 グローバル価値を創造する総合商社です。</p>
+                <p>サムスン物産（韓国）の海外拠点の一つで<br class="mobile" />ある日本にて、70年の長い歴史を誇る、 <br/>化学、鉄鋼、素材、エネルギーなど様々な<br class="mobile" />分野にて未来価値を作り、 <br /><br />グローバル価値を創造する総合商社です。</p>
             </div>
         </section>
-        <section class="sub_cont">
-            <div>
+        <section class="sub_cont corporate" data-aos="fade-up" data-aos-delay="300">
+            <div class="text">
                 <b>サムスンＣ＆Ｔジャパン 株式会社</b>
                 <p>SAMSUNG C&T JAPAN CORPORATION</p>
             </div>
-            <div>
-                <div>
+            <div class="list">
+                <div class="company_cont"> 
                     <dl>
-                        <dt>創業</dt>
+                        <dt><span>創業</span></dt>
                         <dd>1953年（昭和28年）10月6日</dd>
                     </dl>
                     <dl>
-                        <dt>設立</dt>
+                        <dt><span>設立</span></dt>
                         <dd>2012年（平成24年）1月11日</dd>
                     </dl>
                     <dl>
-                        <dt>代表者名</dt>
+                        <dt><span>代表者名</span></dt>
                         <dd>鄭源錫（チョン ウォンソク）</dd>
                     </dl>
                     <dl>
-                        <dt>資本金</dt>
+                        <dt><span>資本金</span></dt>
                         <dd>30億円 （資本準備金20億円）</dd>
                     </dl>
                     <dl>
-                        <dt>本社所在地</dt>
-                        <dd>東京都港区港南二丁目１６番４号</dd>
+                        <dt><span>本社所在地</span></dt>
+                        <dd>東京都港f区港南二丁目１６番４号</dd>
                     </dl>
                     <dl>
-                        <dt>従業員数</dt>
+                        <dt><span>従業員数</span></dt>
                         <dd>41名（2023年12月末時点）</dd>
                     </dl>
                     <dl>
-                        <dt>決算期</dt>
+                        <dt><span>決算期</span></dt>
                         <dd>12月31日</dd>
                     </dl>
                     <dl>
-                        <dt>株主</dt>
+                        <dt><span>株主</span></dt>
                         <dd>サムスン物産株式会社 100％</dd>
                     </dl>
                 </div>
-                <div>
+                <div class="business_cont">
                     <dl>
                         <dt>主な業務</dt>
                         <dd>
-                            <ul>
+                            <ul class="sub_list">
                                 <li>鉄鋼製品の輸出入</li>
                             </ul>
                         </dd>
                     </dl>
                     <dl>
-                        <dt>取扱</dt>
+                        <dt>および取扱品目</dt>
                         <dd>
-                            <ul>
+                            <ul class="sub_list2">
                                 <li>金属製品の輸出入</li>
                                 <li>基礎化学製品の輸出入</li>
                                 <li>有機‧無機化学製品の輸出入</li>
@@ -119,7 +118,7 @@
     </div>
     
     <!-- [S] footer -->
-    <footer data-include="./footer.html"></footer>
+    <footer data-include="../footer.html"></footer>
     <!-- [E] footer -->
 </body>
 </html>
