--- a/html/footer.html
+++ b/html/footer.html
@@ -4,13 +4,13 @@
             <li class="depth1">
                 <b>会社情報</b>
                 <ul class="depth2">
-                    <li><a href="">会社概要</a></li>
-                    <li><a href="">VISION</a></li>
-                    <li><a href="">企業理念</a></li>
-                    <li><a href="">社長メッセージ</a></li>
-                    <li><a href="">沿革</a></li>
-                    <li><a href="">アクセス</a></li>
-                    <li><a href="">お問い合わせ</a></li>
+                    <li><a href="/html/about-us/corporate-profile.html">会社概要</a></li>
+                    <li><a href="/html/about-us/vision.html">VISION</a></li>
+                    <li><a href="/html/about-us/our-philosophy.html">企業理念</a></li>
+                    <li><a href="/html/about-us/presidents-message.html">社長メッセージ</a></li>
+                    <li><a href="/html/about-us/history.html">沿革</a></li>
+                    <li><a href="/html/about-us/office-locations.html">アクセス</a></li>
+                    <li><a href="/html/about-us/contact-info.html">お問い合わせ</a></li>
                 </ul>
             </li>
             <li class="depth1">
