--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -47,10 +47,10 @@
         </section>      
         <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
             <b>本社</b>
-            <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br class="web" />品川グランドセントラルタワー 6階</p>            
+            <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br/>品川グランドセントラルタワー 6階</p>            
             <p>
                 <b>最寄駅</b>
-                JR 品川駅 港南口よりスカイウェイにて直結 徒歩 3 分 <br class="web" />京浜急行 品川駅より 徒歩 6 分
+                JR 品川駅 港南口よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br class="web" />京浜急行 品川駅より 徒歩 6 分
             </p>
             <img src="../../resources/img/sub/img_locations_bg.jpg">
         </section>             
