--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -41,7 +41,20 @@
     <!-- [E] header -->
 
     <div class="contents sub">    
-        <section class="sub_cont sub_title">
+        <section class="sub_cont sub_title">                 
+            <div class="breadcrumbs" role="navigation">
+                <ol>
+                    <li>
+                        <a href="../../html/main.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/corporate-profile.html">会社情報</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/office-locations.html">アクセス</a>
+                    </li>
+                </ol>
+            </div>
             <h2 class="title">アクセス</h2>
             <span class="sub">Office Locations</span>
         </section>      
@@ -50,7 +63,7 @@
             <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br/>品川グランドセントラルタワー 6階</p>            
             <p>
                 <b>最寄駅</b>
-                JR 品川駅 港南口よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br class="web" />京浜急行 品川駅より 徒歩 6 分
+                JR 品川駅 港南口 よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br />京浜急行 品川駅より 徒歩 6 分
             </p>
             <img src="../../resources/img/sub/img_locations_bg.jpg">
         </section>             
