--- a/html/about-us/history.html
+++ b/html/about-us/history.html
@@ -41,44 +41,67 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont">
+        <section class="sub_cont sub_title">                       
+            <div class="breadcrumbs" role="navigation">
+                <ol>
+                    <li>
+                        <a href="../../html/main.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/corporate-profile.html">会社情報</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/history.html">沿革</a>
+                    </li>
+                </ol>
+            </div>
             <h2 class="title">沿革</h2>
             <span class="sub">History</span>
         </section>
-        <section class="sub_cont">
-            <div>
-                <p>サムスン物産（韓国）の海外拠点の一つである日本にて、70年の長い歴史を誇る、 化学、鉄鋼、素材、エネルギーなど様々な分野にて未来価値を作り、 グローバル価値を創造する総合商社です。</p>
-            </div>
+        <section class="sub_cont history1">
+            <div class="text">
+                <p>サムスングループ初の海外拠点で <br class="mobile" />あるサムスンＣ＆Ｔジャパンは、 <br/>1953年から日本で事業を展開し日本と韓国<br class="mobile" />を結ぶ掛け橋の役割を果たしてきました。 <br />サムスンＣ＆Ｔジャパンは、 <br class="mobile" />この70年間の長い経験を基に事業での力量<br class="mobile" />と役割を強化して<br class="web" />グローバルビジネスの中<br class="mobile" />心拠点となろうとしています。</p></div>
             <div class="slide">
                 <div class="slide_item"> 
-                    <img>
-                    <span class="num">2003</span>
-                    <div class="text">六本木ティーキューブ 竣工/入居</div>
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide1.jpg">
+                        <span class="num">2003</span>
+                    </div>
+                    
+                    <div class="info">六本木ティーキューブ <br />竣工/入居</div>
+                </div>
+                <div class="slide_item">
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide2.jpg">
+                        <span class="num">1998</span>
+                    </div>
+                    <div class="info">日本サムスン発足 <br>(日本橋に拠点集約）</div>
                 </div>
                 <div class="slide_item"> 
-                    <img>
-                    <span class="num">1998</span>
-                    <div class="text">日本サムスン発足 <br>(日本橋に拠点集約）</div>
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide3.jpg">
+                        <span class="num">1989</span>
+                    </div>
+                    <div class="info">サムスン電子ジャパン設立<br>(神田須田町オフィス）</div>
                 </div>
                 <div class="slide_item"> 
-                    <img>
-                    <span class="num">1989</span>
-                    <div class="text">サムスン電子ジャパン設立<br>(神田須田町オフィス）</div>
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide4.jpg">
+                        <span class="num">1975</span>
+                    </div>
+                    <div class="info">サムスンジャパン設立<br>(当時の業務風景）</div>
                 </div>
                 <div class="slide_item"> 
-                    <img>
-                    <span class="num">1975</span>
-                    <div class="text">サムスンジャパン設立<br>(当時の業務風景）</div>
-                </div>
-                <div class="slide_item"> 
-                    <img>
-                    <span class="num">1953</span>
-                    <div class="text">サムスン物産 東京支店開設 <br>(日本橋堀留町）</div>
+                    <div class="slide_img">
+                        <img src="../../resources/img/sub/img_history_slide5.jpg">
+                        <span class="num">1953</span>
+                    </div>
+                    <div class="info">サムスン物産 東京支店開設 <br>(日本橋堀留町）</div>
                 </div>
             </div>
         </section>
         
-        <section class="sub_cont">
+        <section class="sub_cont history2">
             <dl>
                 <dt>2023</dt>
                 <dd> 
@@ -99,7 +122,7 @@
                 <dt>2012</dt>
                 <dd> 
                     <ul>
-                        <li><span>5月</span>日本サムスン株式会社 分社化に伴い 「サムスンＣ＆Ｔジャパン株式会社」操業開始 (資本金 30億円）</li>
+                        <li><span>5月</span>日本サムスン株式会社 分社化に伴い <br />「サムスンＣ＆Ｔジャパン株式会社」<br class="mobile" />操業<br class="web">開始 (資本金 30億円）</li>
                         <li><span>1月</span>「サムスンＣ＆Ｔジャパン株式会社」設立</li>
                     </ul>
                 </dd>
@@ -108,7 +131,7 @@
                 <dt>2003</dt>
                 <dd> 
                     <ul>
-                        <li><span>11月</span>日本サムスン本社事務所移転 （港区六本木)</li>
+                        <li><span>11月</span>日本サムスン本社事務所移転 <br class="mobile">（港区六本木)</li>
                     </ul>
                 </dd>
             </dl>
@@ -116,7 +139,7 @@
                 <dt>1998</dt>
                 <dd> 
                     <ul>
-                        <li><span>10月</span>日本サムスン株式会社を設立 (サムスンジャパン、サムスン電子ジャパンおよびサムスングループ社13社の連絡事務所を統合)</li>
+                        <li><span>10月</span>日本サムスン株式会社を設立 (サムスン<br class="mobile" />ジャ<br class="web" />パン、サムスン電子ジャパンおよび<br class="mobile" />サムス<br class="web" />ングループ社13社の連絡事務所を<br class="mobile" /> 統合)</li>
                     </ul>
                 </dd>
             </dl>
@@ -132,7 +155,7 @@
                 <dt>1989</dt>
                 <dd> 
                     <ul>
-                        <li><span>1月</span>サムスン電子ジャパン設立(神田須田町オフィス）</li>
+                        <li><span>1月</span>サムスン電子ジャパン設立<br />(神田須田町オフィス）</li>
                     </ul>
                 </dd>
             </dl>
@@ -140,7 +163,7 @@
                 <dt>1975</dt>
                 <dd> 
                     <ul>
-                        <li><span>12月</span>サムスンジャパン株式会社設立、 法人となる</li>
+                        <li><span>12月</span>サムスンジャパン株式会社設立、 <br />法人となる</li>
                     </ul>
                 </dd>
             </dl>
@@ -148,7 +171,7 @@
                 <dt>1953</dt>
                 <dd> 
                     <ul>
-                        <li><span>10月</span>サムスン物産株式会社 東京支店開設 (グループ最初の海外拠点)</li>
+                        <li><span>10月</span>サムスン物産株式会社 東京支店開設 <br />(グループ最初の海外拠点)</li>
                     </ul>
                 </dd>
             </dl>
