--- a/html/about-us/our-philosophy.html
+++ b/html/about-us/our-philosophy.html
@@ -41,7 +41,20 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont">
+        <section class="sub_cont">         
+            <div class="breadcrumbs" role="navigation">
+                <ol>
+                    <li>
+                        <a href="../../html/main.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/corporate-profile.html">会社情報</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/our-philosophy.html">会社概要</a>
+                    </li>
+                </ol>
+            </div>
             <h2 class="title">会社概要</h2>
             <span class="sub">Our Philosophy</span>
             <p class="explain">
