--- a/html/about-us/presidents-message.html
+++ b/html/about-us/presidents-message.html
@@ -41,7 +41,20 @@
     <!-- [E] header -->
 
     <div class="contents sub">        
-        <section class="sub_cont sub_title">
+        <section class="sub_cont sub_title">     
+            <div class="breadcrumbs" role="navigation">
+                <ol>
+                    <li>
+                        <a href="../../html/main.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/corporate-profile.html">会社情報</a>
+                    </li>
+                    <li>
+                        <a href="../../html/about-us/presidents-message.html">社長メッセージ</a>
+                    </li>
+                </ol>
+            </div>
             <h2 class="title">社長メッセージ</h2>
             <span class= "sub">CEO Message</span>
         </section>     
