--- a/html/header.html
+++ b/html/header.html
@@ -9,7 +9,7 @@
 </div>
 <nav class="gnb web">            
     <div class="gnb_main">
-        <h1><a href=""><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
+        <h1><a href="/html/main.html"><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
         <ul>
             <li class="on"><a href="">会社情報</a></li>
             <li><a href="">事業紹介</a></li>
@@ -94,7 +94,7 @@
 </nav>        
 <nav class="gnb mobile">  
     <div class="gnb_main">
-        <h1><a href=""><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
+        <h1><a href="/html/main.html"><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
         <div class="menu">
             <div class="icon icon_search" onclick="toggleSearchMobile('open')"></div>
             <div class="icon icon_close" onclick="toggleSearchMobile('close')"></div>
