--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,11 @@
 <head>
     <!--파비콘-->
     <link rel="shortcut icon" href="/resources/img/common/favicon.ico" />
-    <title>title</title>
+    <title>상사부문 동경법인 퍼블리싱 페이지</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <script src="/resources/js/jquery.min.js"></script>    
-    <title>Common UI</title>
+    <script src="/resources/js/jquery.min.js"></script> 
     <style>
         body {
             font-size: 14px;
@@ -137,11 +136,10 @@
 
 <body>
     <div class="flex">
-        <span>Update : 2024-03-17</span>
+        <span>Update : 2024-03-22</span>
         <h1 class="title">상사부문 동경법인 퍼블리싱</h1>        
 
         <table class="table">
-            <caption>퍼블리싱 페이지</caption>
             <thead>
                 <tr>
                     <th>1Depth</th>
@@ -158,7 +156,7 @@
                     <td></td>
                     <td><a href="/html/main.html" target="_blank"> /html/main.html</a></td>
                     <td><button class="b3"></button></td>
-                    <td></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                 </tr>
                 <tr>
@@ -173,7 +171,7 @@
                     <td></td>
                     <td>corporate-profile</td>
                     <td><a href="/html/about-us/corporate-profile.html" target="_blank"> /html/about-us/corporate-profile.html</a></td>
-                    <td><button class="b2"></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -205,7 +203,7 @@
                     <td></td>
                     <td>history</td>
                     <td><a href="/html/about-us/history.html" target="_blank"> /html/about-us/history.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -221,15 +219,14 @@
                     <td></td>
                     <td>contact us</td>
                     <td><a href="/html/about-us/contact-info.html" target="_blank"> /html/about-us/contact-info.html</a></td>
-                    <td><button></button></td>
+                    <td><button class="b2"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
             </tbody>
         </table>   
         
-        <table class="table">
-            <caption>퍼블리싱 페이지</caption>
+        <!--table class="table">
             <thead>
                 <tr>
                     <th>1Depth</th>
@@ -258,122 +255,8 @@
                     <td></td>
                 </tr>
             </tbody>
-        </table> 
+        </!--table--> 
 
-        <!--table class="table">
-            <caption>공통 UI</caption>
-            <thead>
-                <tr>
-                    <th>페이지명</th>
-                    <th>링크</th>
-                    <th>퍼블 상태</th>
-                    <th>검사 상태</th>
-                    <th>코멘트</th>
-                </tr>
-            </thead>
-
-            <tbody>               
-                <tr>
-                    <td>Color</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Common/color.html"> ./Views/Shared/Common/color.html
-                        </a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td>Buttons</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Container__form/button.html">./Views/Shared/Container__form/button.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td>Selectors</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Container__form/selectors.html">./Views/Shared/Container__form/selectors.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>                
-
-                <tr>
-                    <td>Tab</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Common/tab.html">./Views/Shared/Common/tab.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td>dropdown</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Common/dropDown.html">./Views/Shared/Common/dropDown.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td>pagination</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Common/pagination.html">./Views/Shared/Common/pagination.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <td>Modal</td>
-                    <td>
-                        <a target="_blank" href="./Views/Shared/Modal/modal.html">./Views/Shared/Modal/modal.html</a>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td>
-                        <button class=""></button>
-                    </td>
-                    <td></td>
-                </tr>               
-
-            </tbody>
-        </table-->
     </div>
 </body>
 
