--- a/html/main.html
+++ b/html/main.html
@@ -37,192 +37,7 @@
 <body>
     <div class="dim"></div>
     <!-- [S] header -->
-    <!-- <header data-include="./header.html" class="header"></header> -->
-        <header class="header">
-            <div class="header_top">
-                <ul>
-                    <li><a href="">日本語</a></li>
-                    <li><a href="">English</a ></li> 
-                    <li><a href="">SAMSUNG C&T</a></li>
-                    <li class="web"><a href="">GLOBAL NETWORK</a></li>
-                </ul>
-            </div>
-            <nav class="gnb web">            
-                <div class="gnb_main">
-                    <h1><a href=""><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
-                    <ul>
-                        <li class="on"><a href="">会社情報</a></li>
-                        <li><a href="">事業紹介</a></li>
-                        <li><a href="">サステナビリティ</a></li>
-                        <li><a href="">採用情報</a></li>
-                        <li><a href="">PR</a></li>
-                    </ul>
-                    <div class="menu">
-                        <div class="icon icon_search" onclick="toggleSearchWeb('open')"></div>
-                        <div class="icon icon_close" onclick="toggleSearchWeb('close')"></div>
-                        <div class="icon icon_menu" onclick="toggleMenuWeb('open')"></div>
-                    </div>
-                </div>
-                <div class="gnb_sub">
-                    <button type="button" class="icon icon_close" onclick="toggleMenuWeb('close')">CLOSE</button>
-                    <div data-gnb="1">
-                        <div class="img">
-                            <span>会社情報</span>
-                        </div>
-                        <ul>
-                            <li><a href="">会社概要</a></li>
-                            <li><a href="">VISION</a></li>
-                            <li><a href="">企業理念</a></li>
-                            <li><a href="">社長メッセージ</a></li>
-                            <li><a href="">沿革</a></li>
-                            <li><a href="">アクセス</a></li>
-                            <li><a href="">お問い合わせ</a></li>
-                        </ul>
-                    </div>
-                    <div data-gnb="2">
-                        <div class="img">
-                            <span>事業紹介</span>
-                        </div>
-                        <ul>
-                            <li><a href="">化学</a></li>
-                            <li><a href="">鉄鋼</a></li>
-                            <li><a href="">素材</a></li>
-                            <li><a href="">エネルギー</a></li>
-                        </ul>
-                    </div>
-                    <div data-gnb="3">
-                        <div class="img">
-                            <span>サステナビリティ</span>
-                        </div>
-                        <ul>
-                            <li><a href="">環境</a></li>
-                            <li><a href="">社会</a></li>
-                            <li><a href="">コンプライアンス</a></li>
-                        </ul>
-                    </div>
-                    <div data-gnb="4">
-                        <div class="img">
-                            <span>採用情報</span>
-                        </div>
-                        <ul>
-                            <li><a href="">キャリアガイド</a></li>
-                            <li><a href="">カルチャー</a></li>
-                            <li><a href="">採用プロセス</a></li>
-                            <li><a href="">Q&A</a></li>
-                        </ul>
-                    </div>
-                    <div data-gnb="5">
-                        <div class="img">
-                            <span>PR</span>
-                        </div>
-                        <ul>
-                            <li><a href="">ニュース</a></li>
-                            <li><a href="">広報資料</a></li>
-                            <li><a href="">財務データ</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="gnb_search">
-                    <div>
-                        <label>
-                            <input type="text" placeholder="検索語を入力"/>
-                        </label>
-                        <button type="button" class="icon icon_search_close" onclick="removeSearchText()">close</button>
-                        <button type="button" class="icon icon_search">search</button>
-                    </div>
-                </div>
-            </nav>        
-            <nav class="gnb mobile">  
-                <div class="gnb_main">
-                    <h1><a href=""><img src="/resources/img/common/icon_logo.svg" alt="SAMSUNG C&T JAPAN"></a></h1>
-                    <div class="menu">
-                        <div class="icon icon_search" onclick="toggleSearchMobile('open')"></div>
-                        <div class="icon icon_close" onclick="toggleSearchMobile('close')"></div>
-                        <div class="icon icon_menu" onclick="toggleGnbMobile('open')"></div>
-                    </div>
-                </div>
-                <div class="gnb_sub">
-                    <button type="button" class="icon icon_close" onclick="toggleGnbMobile('close')">CLOSE</button>
-                    <ul>
-                        <li>
-                            <div class="depth1">
-                                <a href="/">HOME</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="depth1" onclick="toggleGnbMenuMobile(this)">
-                                <a href="#" onclick="javascript:void(0);">会社概要</a>
-                                <button type="button" class="icon icon_toggle">menu_close</button>
-                            </div>
-                            <ul class="depth2">
-                                <li><a href="">会社概要</a></li>
-                                <li><a href="">VISION</a></li>
-                                <li><a href="">企業理念</a></li>
-                                <li><a href="">社長メッセージ</a></li>
-                                <li><a href="">沿革</a></li>
-                                <li><a href="">アクセス</a></li>
-                                <li><a href="">お問い合わせ</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <div class="depth1" onclick="toggleGnbMenuMobile(this)">
-                                <a href="#" onclick="javascript:void(0);">事業紹介</a>
-                                <button type="button" class="icon icon_toggle">menu_close</button>
-                            </div>
-                            <ul class="depth2">
-                                <li><a href="">化学</a></li>
-                                <li><a href="">鉄鋼</a></li>
-                                <li><a href="">素材</a></li>
-                                <li><a href="">エネルギー</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <div class="depth1" onclick="toggleGnbMenuMobile(this)">
-                                <a href="#" onclick="javascript:void(0);">サステナビリティ</a>
-                                <button type="button" class="icon icon_toggle">menu_close</button>
-                            </div>
-                            <ul class="depth2">
-                                <li><a href="">環境</a></li>
-                                <li><a href="">社会</a></li>
-                                <li><a href="">コンプライアンス</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <div class="depth1" onclick="toggleGnbMenuMobile(this)">
-                                <a href="#" onclick="javascript:void(0);">採用情報</a>
-                                <button type="button" class="icon icon_toggle">menu_close</button>
-                            </div>
-                            <ul class="depth2">
-                                <li><a href="">キャリアガイド</a></li>
-                                <li><a href="">カルチャー</a></li>
-                                <li><a href="">採用プロセス</a></li>
-                                <li><a href="">Q&A</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <div class="depth1" onclick="toggleGnbMenuMobile(this)">
-                                <a href="#" onclick="javascript:void(0);">PR</a>
-                                <button type="button" class="icon icon_toggle" onclick="toggleGnbMenuMobile(this)">menu_close</button>
-                            </div>
-                            <ul class="depth2">
-                                <li><a href="">ニュース</a></li>
-                                <li><a href="">広報資料</a></li>
-                                <li><a href="">財務データ</a></li>
-                            </ul>
-                        </li>
-                    </ul> 
-                </div>
-                <div class="gnb_search">
-                    <div>
-                        <label>
-                            <input type="text" placeholder="検索語を入力"/>
-                        </label>
-                        <button type="button" class="icon icon_search_close" onclick="removeSearchText()">close</button>
-                        <button type="button" class="icon icon_search">search</button>
-                    </div>
-                </div>     
-            </nav>
-        </header>
+    <header data-include="./header.html" class="header"></header>
     <!-- [E] header -->
 
     <div class="contents">
